@@ -34,7 +34,7 @@ using MonoHotDraw.Commands;
 namespace MonoHotDraw.Tools {
 
 	// TODO: Catch enter key
-	public class SimpleTextTool: FigureTool	{
+	public class SimpleTextTool: TextTool	{
 
 		public SimpleTextTool (IDrawingEditor editor, SimpleTextFigure fig, ITool dt) 
 			: base (editor, fig, dt) {
@@ -74,7 +74,7 @@ namespace MonoHotDraw.Tools {
 			
 			if (type == EventType.TwoButtonPress) {
 				CreateUndoActivity();
-				_showingEntry = true;
+				_showingWidget = true;
 				_entry.Text = (Figure as SimpleTextFigure).Text;
 				
 				View.AddWidget (_entry, 0,0);
@@ -87,70 +87,16 @@ namespace MonoHotDraw.Tools {
 			}			
 			DefaultTool.MouseDown (ev);
 		}
-
-		public override void Activate () {
-			_showingEntry = false;
-			base.Activate ();
-		}
-
+		
 		public override void Deactivate () {
-			if (_showingEntry) {
+			if (_showingWidget && UndoActivity != null) {
 				View.RemoveWidget (_entry);
 				UpdateUndoActivity();
 				PushUndoActivity();
 			}
 			base.Deactivate ();
 		}
-		
-		public override void MouseDrag (MouseEvent ev) {
-			if (!_showingEntry) {
-				DefaultTool.MouseDrag (ev);
-			}
-		}
-		
-		public class TextToolUndoActivity: AbstractUndoActivity {
-			public TextToolUndoActivity(IDrawingView view): base(view) {
-				Undoable = true;
-				Redoable = true;
-			}
-			
-			public override bool Undo () {
-				if (!base.Undo ()) {
-					return false;
-				}
-				AffectedFigure.Text = OldText;
-				return true;
-			}
-			
-			public override bool Redo () {
-				if (!base.Undo ()) {
-					return false;
-				}
-				AffectedFigure.Text = NewText;
-				return true;
-			}
-			
-			public string OldText { get; set; }
-			public string NewText { get; set; }
-			public SimpleTextFigure AffectedFigure { get; set; }
-		}
-		
-		protected void CreateUndoActivity() {
-			TextToolUndoActivity activity = new TextToolUndoActivity(Editor.View);
-			activity.AffectedFigure = Figure as SimpleTextFigure;
-			activity.OldText = activity.AffectedFigure.Text;
-			UndoActivity = activity;
-		}
 
-		protected void UpdateUndoActivity() {
-			TextToolUndoActivity activity = UndoActivity as TextToolUndoActivity;
-			activity.NewText = activity.AffectedFigure.Text;
-			if (activity.NewText == activity.OldText) {
-				UndoActivity = null;
-			}
-		}
-		
 		private Gtk.Entry _entry;
-		private bool _showingEntry = false;
 	}
 }
