@@ -144,6 +144,7 @@
     <Compile Include="SteticComponent.cs" />
     <Compile Include="MonoHotDraw.Handles\UndoableHandle.cs" />
     <Compile Include="MonoHotDraw.Handles\ResizeHandle.cs" />
+    <Compile Include="MonoHotDraw.Tools\TextTool.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
