@@ -1,5 +1,9 @@
 2009-06-10  Manuel Cerón  <ceronman@gmail.com>
 
+	* MonoHotDraw.csproj: Added TextTool.
+
+2009-06-10  Manuel Cerón  <ceronman@gmail.com>
+
 	* SteticComponent.cs: Added helper methods and events
 
 	* MonoHotDraw.csproj: Removed UndoableActivity
